# Game-of-Life

./: CMakeLists.txt  README.md  checker.c  checker.h  grid.c  grid.h  logic.c  logic.h  main.c  output.txt  test.txt  test2.txt  unit_tests.c
